back-end refactor to handle authmiddleware
testing refactored backend to handle auth middleware in preparation to migrate to Vite app

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <title>Prestissimo</title>
   </head>
-  <body class="h-full">
+  <body class="h-full bg-gray-50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
